fixed focused tabs having the wrong color

--- a/styles/themes/components/tabs.less
+++ b/styles/themes/components/tabs.less
@@ -53,7 +53,8 @@
 }
 .nav-tabs > li:hover > a,
 .nav-tabs > li:hover > span,
-.nav-tabs > li:hover > span > span {
+.nav-tabs > li:hover > span > span,
+.nav-tabs > li > a:focus {
 	background-color:@tab-background-color-hover;
 	text-decoration:none !important;
 }
